gcc/testsuite/rust/rustc/ui/issues/issue-3096-1.rs
fn main() {
    match () { } // { dg-error ".E0004." "" { target *-*-* } }
}

